Overflow fix
Fixed horizontal overflow from the video overlay. Also removed some redundant code.

--- a/css/style.css
+++ b/css/style.css
@@ -69,20 +69,20 @@ header {
 header video {
 	width: 100%;
 	height: 100%;
-	max-width: 1200;
+	max-width: 1200px;
 }
 .video-overlay {
 	position: absolute;
 	width: 100%;
 	height: 50%;
+	max-width: 1200px;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23000000' fill-opacity='0.38' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
 .info {
 	margin: 0 auto;
 	margin-top: 1vw;
-	width: auto;
+	width: 100%;
 	text-align: center;
-	overflow: hidden;
 	white-space: nowrap;
 	opacity: 0;
 	font-family: "Futura Bk BT", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
